# battlesnake

./: .gitmodules  CMakeLists.txt
Battlesnake/Battlesnake/: CMakeLists.txt  battlesnake.cpp
Core/Core/: CMakeLists.txt  Common.h  String.h  Vector.h
Server/Server/: CMakeLists.txt  Server.cpp  Server.h  ServerTypes.h
Test/: CMakeLists.txt
Test/ServerTypes/: CMakeLists.txt  TestServerTypes.cpp
Test/ServerTypes/TestJSONs/: Board.json  GameInfo.json  GameState.json  Ruleset.json  Snake.json  SnakeCustomizations.json
